RESOLVED FIXED82405
[chromium] Fix --enabled-threaded-compositing flag in DRT
https://bugs.webkit.org/show_bug.cgi?id=82405
Summary [chromium] Fix --enabled-threaded-compositing flag in DRT
Adrienne Walker
Reported 2012-03-27 17:51:57 PDT
[chromium] Fix --enabled-threaded-compositing flag in DRT
Attachments
Patch (4.95 KB, patch)
2012-03-27 17:59 PDT, Adrienne Walker
no flags
Adrienne Walker
Comment 1 2012-03-27 17:59:24 PDT
James Robinson
Comment 2 2012-03-27 18:10:55 PDT
Comment on attachment 134185 [details] Patch Aha! R=me
WebKit Review Bot
Comment 3 2012-03-27 19:07:15 PDT
Comment on attachment 134185 [details] Patch Clearing flags on attachment: 134185 Committed r112354: <http://trac.webkit.org/changeset/112354>
WebKit Review Bot
Comment 4 2012-03-27 19:07:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.