[chromium] Fix --enabled-threaded-compositing flag in DRT https://bugs.webkit.org/show_bug.cgi?id=82405

Reviewed by James Robinson.

--enable-threaded-compositing wasn't working because there was no way
to set the value before it was used in the TestShell constructor.

To avoid adding yet another boolean parameter to TestShell's
constructor, add an explicit initialize function that can operate on
any boolean settings that are set post-constructor.

* DumpRenderTree/chromium/DumpRenderTree.cpp:
(main):
* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::TestShell):
(TestShell::initialize):
* DumpRenderTree/chromium/TestShell.h:
(TestShell):
(TestShell::setTestShellMode):


Canonical link: https://commits.webkit.org/99775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112354 268f45cc-cd09-0410-ab3c-d52691b4dbfc